; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_rw_lock_yield_shared.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_rw_lock_yield_shared.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i32 }

@LCK_RW_ASSERT_SHARED = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @lck_rw_lock_yield_shared(i32* %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_2__, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @LCK_RW_ASSERT_SHARED, align 4
  %9 = call i32 @lck_rw_assert(i32* %7, i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @ordered_load_rw(i32* %10)
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 2
  store i32 %11, i32* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %16
  %21 = load i64, i64* %5, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %30

23:                                               ; preds = %20, %16, %2
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @lck_rw_unlock_shared(i32* %24)
  %26 = call i32 @mutex_pause(i32 2)
  %27 = load i32*, i32** %4, align 8
  %28 = call i32 @lck_rw_lock_shared(i32* %27)
  %29 = load i64, i64* @TRUE, align 8
  store i64 %29, i64* %3, align 8
  br label %32

30:                                               ; preds = %20
  %31 = load i64, i64* @FALSE, align 8
  store i64 %31, i64* %3, align 8
  br label %32

32:                                               ; preds = %30, %23
  %33 = load i64, i64* %3, align 8
  ret i64 %33
}

declare dso_local i32 @lck_rw_assert(i32*, i32) #1

declare dso_local i32 @ordered_load_rw(i32*) #1

declare dso_local i32 @lck_rw_unlock_shared(i32*) #1

declare dso_local i32 @mutex_pause(i32) #1

declare dso_local i32 @lck_rw_lock_shared(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
